data/derived/comb/progs/unify/prog8509.ml.out
Characters 168-190:
  | 2 -> buildSine(build(rand, depth-1))
                  ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
